--- a/app/globals.css
+++ b/app/globals.css
@@ -70,3 +70,9 @@
       @apply bg-background text-foreground;
    }
 }
+
+@layer components {
+   .container {
+      @apply px-4 sm:px-6 md:px-8 lg:px-12 xl:px-24;
+   }
+}
